Stopped shadow overflowing from subbanner on to nav

--- a/app/assets/stylesheets/partials/_navigation.sass
+++ b/app/assets/stylesheets/partials/_navigation.sass
@@ -7,9 +7,11 @@ nav
     #primary-banner
         padding: 0.5rem 0
         background: #2d2d2d
+        position: relative
+        z-index: 1
 
         &.drop-shadow
-            box-shadow: 0px 0px 16px -5px rgb(0, 0, 0)
+            box-shadow: 0px 5px 16px -9px black
 
         .min-container#navigation
             position: relative
@@ -70,7 +72,7 @@ nav
 
     #sub-banner
         background: $dim-bg-gradient
-        box-shadow: 0px 0px 16px -5px rgb(0, 0, 0)
+        box-shadow: 0px 5px 16px -9px black
 
         > .min-container
             padding: 1.3rem 1rem
